--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+#Global
+.AppleDouble
+.LSOverride
+Icon
+
+# SublimeText project files
+*.sublime-workspace
+
 # Xcode
-#
-build/
+.DS_Store
+*/build/*
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -10,17 +18,26 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
-*.xccheckout
+profile
 *.moved-aside
 DerivedData
+.idea/
 *.hmap
-*.ipa
-*.xcuserstate
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-#Pods/
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+Pods/
+gems
+*report*
+report.xml
+*.mobileprovision
+*.cer
+compile_commands.json
+release_notes.txt
+*.ipa
+*.dSYM*
