--- a/src/Podfile
+++ b/src/Podfile
@@ -13,12 +13,11 @@ target '[[PROJECT_NAME]]Tests' do
 end
 
 target '[[PROJECT_NAME]]' do
-    pod 'JSONModel'
-    pod 'GoogleAnalytics', '~> 3.13'
     pod 'Alamofire', '2.0.2'
     pod 'ObjectMapper'
 	pod 'SwiftyJSON', '~> 2.3'
 	pod 'CryptoSwift'
 	pod 'Fabric'
 	pod 'Crashlytics'
+    pod 'Google/Analytics'
 end
